Blog post fix
- in https://prestosql.io/blog/2019/05/21/optimizing-the-casts-away.html
- needed to remove extra spacing for li on left to allow formula to fit
- in the long run we will make the blog same width as other pages

--- a/_sass/blog/base.scss
+++ b/_sass/blog/base.scss
@@ -78,7 +78,9 @@ figcaption {
  * Lists
  */
 ul, ol {
-  margin-left: $spacing-unit;
+//  margin-left: $spacing-unit;
+// deactivated to provide room in
+// https://prestosql.io/blog/2019/05/21/optimizing-the-casts-away.html
 }
 
 li {
